fixup! Fixes translation position to fit below subscribed letters, and adds text-shadow on tibetan in case tibetan still overflows a bit on translation

--- a/stylesheets/color-modes/gold-on-lapis-lazuli.css
+++ b/stylesheets/color-modes/gold-on-lapis-lazuli.css
@@ -24,3 +24,10 @@ body[class*=page] {
   background-blend-mode: color;
   background-color: #010119;
 }
+.pecha-a3 .line .tibetan td {
+  text-shadow: 0 0 1px #010119;
+}
+.pecha-a3 .line .translation td {
+  position: relative;
+  z-index: 0;
+}
